@@ -214,7 +214,6 @@ return array(
       'eZImageShellHandler'                                => 'lib/ezimage/classes/ezimageshellhandler.php',
       'eZImageTextLayer'                                   => 'lib/ezimage/classes/ezimagetextlayer.php',
       'eZImageType'                                        => 'kernel/classes/datatypes/ezimage/ezimagetype.php',
-      'eZImportLookupTable'                                => 'kernel/classes/ezimportlookuptable.php',
       'eZInfocollectorFunctionCollection'                  => 'kernel/infocollector/ezinfocollectorfunctioncollection.php',
       'eZInformationCollection'                            => 'kernel/classes/ezinformationcollection.php',
       'eZInformationCollectionAttribute'                   => 'kernel/classes/ezinformationcollectionattribute.php',
@@ -246,7 +245,6 @@ return array(
       'eZMimeType'                                         => 'lib/ezutils/classes/ezmimetype.php',
       'eZModule'                                           => 'lib/ezutils/classes/ezmodule.php',
       'eZModuleFunctionInfo'                               => 'lib/ezutils/classes/ezmodulefunctioninfo.php',
-      'eZModuleManager'                                    => 'kernel/classes/ezmodulemanager.php',
       'eZModuleOperationInfo'                              => 'lib/ezutils/classes/ezmoduleoperationinfo.php',
       'eZModuleOperator'                                   => 'kernel/common/ezmoduleoperator.php',
       'eZModuleParamsOperator'                             => 'kernel/common/ezmoduleparamsoperator.php',
